# troopy

./: .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
examples/: basic_example.py  custom_handler_factory_example.py  custom_message_router_example.py  function_as_handler_example.py
tests/: test_message_bus.py  test_message_router.py
troopy/: __init__.py  errors.py  message_bus.py  message_router.py
